6.1-not good (test poly and tri & color)