@@ -3,6 +3,7 @@ import org.junit.jupiter.api.Test;
 import primitives.*;
 import java.util.List;
 import static org.junit.jupiter.api.Assertions.*;
+import geometries.Intersectable.GeoPoint;
 
 /**
  * Unit tests for geometries.Plane class
@@ -97,34 +98,35 @@ public class PlaneTests {
 
         // ============ Equivalence Partitions Tests ==============
         // TC01: Ray intersects the plane (1 points)
-        List<Point> result = plane.findIntersections(new Ray(new Vector(0, 0, -1),  new Point(0,1,1)));
+        List<GeoPoint> result = plane.findGeoIntersections(new Ray(new Vector(0, 0, -1),  new Point(0,1,1)));
         assertEquals(result.size(),
                 1,
                 "Wrong number of points");
-        assertEquals(new Point(0, 1, 0), result.get(0),
+        assertEquals(new GeoPoint(plane,new Point(0, 1, 0)),
+                result.getFirst(),
                 "Ray intersects the plane");
 
         // TC02: Ray doesn't intersect the plane (0 points)
-        assertNull(plane.findIntersections(new Ray( new Vector(0, 0, 1),new Point(0, 1, 1))),
+        assertNull(plane.findGeoIntersectionsHelper(new Ray( new Vector(0, 0, 1),new Point(0, 1, 1))),
                 "Ray doesn't intersect the plane");
 
         // =============== Boundary Values Tests ==================
         //**** Group: Ray is parallel to the plane
         //TC03: Ray is included in the plane
-        assertNull(plane.findIntersections(new Ray(new Vector(1, -1, 0),new Point(0, 0, 1))),
+        assertNull(plane.findGeoIntersections(new Ray(new Vector(1, -1, 0),new Point(0, 0, 1))),
                 "Ray is included in the plane. Ray is parallel to the plane");
 
         //TC04: Ray isn't included in the plane
-        assertNull(plane.findIntersections(new Ray( new Vector(1, -1, 0),new Point(0, 0, 2))),
+        assertNull(plane.findGeoIntersections(new Ray( new Vector(1, -1, 0),new Point(0, 0, 2))),
                 "Ray isn't included in the plane. Ray is parallel to the plane");
 
         //**** Group: Special case
         //TC05: Ray begins at the plane (p0 is in the plane, but not the ray)
-        assertNull(plane.findIntersections(new Ray(new Vector(0, 0, -1),new Point(1, 0, 0))),
+        assertNull(plane.findGeoIntersections(new Ray(new Vector(0, 0, -1),new Point(1, 0, 0))),
                 "Ray begins at the plane (p0 is in the plane, but not the ray)");
 
         //TC06: Ray begins in the plane's reference point
-        assertNull(plane.findIntersections(new Ray(new Vector(1, 0, 0),plane.getQ())),
+        assertNull(plane.findGeoIntersections(new Ray(new Vector(1, 0, 0),plane.getQ())),
                 "Ray begins in the plane's reference point");
     }
 }
