@@ -1,8 +1,7 @@
 package geometries;
 import org.junit.jupiter.api.Test;
-import primitives.Point;
-import primitives.Ray;
-import primitives.Vector;
+import primitives.*;
+import geometries.Intersectable.GeoPoint;
 import java.util.List;
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -60,40 +59,40 @@ class SphereTests {
         Point p2 = new Point(1.53484692283495, 0.844948974278318, 0);
 
         // TC01: Ray's line is outside the sphere (0 points)
-        assertNull(sphere.findIntersections(new Ray(new Vector(1, 1, 0), new Point(-1, 0, 0))),
+        assertNull(sphere.findGeoIntersections(new Ray(new Vector(1, 1, 0), new Point(-1, 0, 0))),
                 "Ray's line out of sphere");
 
         // TC02: Ray starts before and crosses the sphere (2 points)
-        List<Point> sphereIntersections = sphere.findIntersections(new Ray(new Vector(3, 1, 0), new Point(-1, 0, 0)));
+        List<GeoPoint> sphereIntersections = sphere.findGeoIntersections(new Ray(new Vector(3, 1, 0), new Point(-1, 0, 0)));
 
         assertEquals(2, sphereIntersections.size(),
                 "Wrong number of points");
 
-        if (sphereIntersections.get(0).getX() > sphereIntersections.get(1).getX()) {
+        if (sphereIntersections.get(0).point.getX() > sphereIntersections.get(1).point.getX()) {
             sphereIntersections = List.of(sphereIntersections.get(1), sphereIntersections.get(0));
         }
-        assertEquals(List.of(p1, p2),
+        assertEquals(List.of(new GeoPoint(sphere, p1), new GeoPoint(sphere, p2)),
                 sphereIntersections,
                 "Ray crosses sphere");
 
         // TC03: Ray starts inside the sphere (1 point)
-        assertEquals(List.of(p2),
-                List.of(sphere.findIntersections(new Ray(new Vector(3, 1, 0), new Point(0.5, 0.5, 0))).get(0)),
+        assertEquals(List.of(new GeoPoint(sphere, p2)),
+                List.of(sphere.findGeoIntersections(new Ray(new Vector(3, 1, 0), new Point(0.5, 0.5, 0))).get(0)),
                 "Ray from inside sphere");
 
         // TC04: Ray starts after the sphere (0 points)
-        assertNull(sphere.findIntersections(new Ray(new Vector(3, 1, 0), new Point(2, 1, 0))),
+        assertNull(sphere.findGeoIntersections(new Ray(new Vector(3, 1, 0), new Point(2, 1, 0))),
                 "Sphere behind Ray");
 
         // =============== Boundary Values Tests ==================
         // **** Group: Ray's line crosses the sphere (but not the center)
         // TC05: Ray starts at sphere and goes inside (1 point)
-        assertEquals(List.of(new Point(2, 0, 0)),
-                List.of(sphere.findIntersections(new Ray(new Vector(1, 1, 0), new Point(1, -1, 0))).get(0)),
+        assertEquals(List.of(new GeoPoint(sphere, new Point(2, 0, 0))),
+                List.of(sphere.findGeoIntersections(new Ray(new Vector(1, 1, 0), new Point(1, -1, 0))).getFirst()),
                 "Ray from sphere inside");
 
         // TC06: Ray starts at sphere and goes outside (0 points)
-        assertNull(sphere.findIntersections(new Ray(new Vector(1, 1, 0), new Point(2, 0, 0))),
+        assertNull(sphere.findGeoIntersections(new Ray(new Vector(1, 1, 0), new Point(2, 0, 0))),
                 "Ray from sphere outside");
 
         // **** Group: Ray's line goes through the center
@@ -101,56 +100,56 @@ class SphereTests {
         assertEquals(2,
                 sphereIntersections.size(),
                 "Wrong number of points");
-        sphereIntersections = sphere.findIntersections(new Ray(new Vector(0, 1, 0), new Point(1, -2, 0)));
+        sphereIntersections = sphere.findGeoIntersections(new Ray(new Vector(0, 1, 0), new Point(1, -2, 0)));
 
-        if (sphereIntersections.get(0).getY() > sphereIntersections.get(1).getY()) {
+        if (sphereIntersections.get(0).point.getY() > sphereIntersections.get(1).point.getY()) {
             sphereIntersections = List.of(sphereIntersections.get(1), sphereIntersections.get(0));
         }
 
-        assertEquals(List.of(new Point(1, -1, 0),
-                        new Point(1, 1, 0)),
+        assertEquals(List.of(new GeoPoint(sphere, new Point(1, -1, 0)),
+                new GeoPoint(sphere, new Point(1, 1, 0))),
                 sphereIntersections,
                 "Line through O, ray crosses sphere");
 
         // TC08: Ray starts at sphere and goes inside (1 point)
-        assertEquals(List.of(new Point(1, 1, 0)),
-                List.of(sphere.findIntersections(new Ray(new Vector(0, 1, 0), new Point(1, -1, 0))).get(0)),
+        assertEquals(List.of(new GeoPoint(sphere,new Point(1, 1, 0))),
+                List.of(sphere.findGeoIntersections(new Ray(new Vector(0, 1, 0), new Point(1, -1, 0))).get(0)),
                 "Line through O, ray from and crosses sphere");
 
         // TC09: Ray starts inside (1 point)
-        assertEquals(List.of(new Point(1, 1, 0)),
-                List.of(sphere.findIntersections(new Ray(new Vector(0, 1, 0), new Point(1, 0.5, 0))).get(0)),
+        assertEquals(List.of(new GeoPoint(sphere, new Point(1, 1, 0))),
+                List.of(sphere.findGeoIntersections(new Ray(new Vector(0, 1, 0), new Point(1, 0.5, 0))).get(0)),
                 "Line through O, ray from inside sphere");
 
         // TC10: Ray starts at the center (1 point)
-        assertEquals(List.of(new Point(1, 1, 0)),
-                List.of(sphere.findIntersections(new Ray(new Vector(0, 1, 0), new Point(1, 0, 0))).get(0)),
+        assertEquals(List.of(new GeoPoint(sphere, new Point(1, 1, 0))),
+                List.of(sphere.findGeoIntersections(new Ray(new Vector(0, 1, 0), new Point(1, 0, 0))).get(0)),
                 "Line through O, ray from O");
 
         // TC11: Ray starts at sphere and goes outside (0 points)
-        assertNull(sphere.findIntersections(new Ray(new Vector(0, 1, 0), new Point(1, 1, 0))),
+        assertNull(sphere.findGeoIntersections(new Ray(new Vector(0, 1, 0), new Point(1, 1, 0))),
                 "Line through O, ray from sphere outside");
 
         // TC12: Ray starts after sphere (0 points)
-        assertNull(sphere.findIntersections(new Ray(new Vector(0, 1, 0), new Point(1, 2, 0))),
+        assertNull(sphere.findGeoIntersections(new Ray(new Vector(0, 1, 0), new Point(1, 2, 0))),
                 "Line through O, ray outside sphere");
 
         // **** Group: Ray's line is tangent to the sphere (all tests 0 points)
         // TC13: Ray starts before the tangent point
-        assertNull(sphere.findIntersections(new Ray(new Vector(1, 0, 0), new Point(0, 1, 0))),
+        assertNull(sphere.findGeoIntersections(new Ray(new Vector(1, 0, 0), new Point(0, 1, 0))),
                 "Tangent line, ray before sphere");
 
         // TC14: Ray starts at the tangent point
-        assertNull(sphere.findIntersections(new Ray(new Vector(1, 0, 0), new Point(1, 1, 0))),
+        assertNull(sphere.findGeoIntersections(new Ray(new Vector(1, 0, 0), new Point(1, 1, 0))),
                 "Tangent line, ray at sphere");
 
         // TC14: Ray starts after the tangent point
-        assertNull(sphere.findIntersections(new Ray(new Vector(1, 0, 0), new Point(2, 1, 0))),
+        assertNull(sphere.findGeoIntersections(new Ray(new Vector(1, 0, 0), new Point(2, 1, 0))),
                 "Tangent line, ray after sphere");
 
         // **** Group: Special cases
         // TC15: Ray's line is outside, ray is orthogonal to ray start to sphere's center line
-        assertNull(sphere.findIntersections(new Ray(new Vector(0, 0, 1), new Point(-1, 0, 0))),
+        assertNull(sphere.findGeoIntersections(new Ray(new Vector(0, 0, 1), new Point(-1, 0, 0))),
                 "Ray orthogonal to ray head -> O line");
 
     }
